--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npx webpack --config webpack.config.js -w",
-    "test": "jest"
+    "test": "jest",
+    "db:rebuild": "node scripts/build-database/create-database.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "css-loader": "^0.28.10",
     "node-sass": "^4.8.3",
     "npm": "^5.8.0",
+    "pg": "^7.4.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "sass-loader": "^6.0.7",
