--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "scripts": {
     "start": "npx webpack --config webpack.config.js -w",
     "test": "jest",
-    "db:rebuild": "node scripts/build-database/create-database.js"
+    "db:clean": "node scripts/build-database/create-database.js",
+    "db:seed": "node scripts/seed-database/seed-database.js",
+    "db:rebuild": "npm run db:clean && npm run db:seed"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "babel-loader": "^7.1.4",
     "css-loader": "^0.28.10",
+    "lodash": "^4.17.5",
     "node-sass": "^4.8.3",
     "npm": "^5.8.0",
     "pg": "^7.4.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "round-to": "^2.0.0",
     "sass-loader": "^6.0.7",
     "scss-loader": "0.0.1",
     "style-loader": "^0.20.2",
