--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx webpack --config webpack.config.js -w",
+    "start": "node server/server.js",
+    "webpack": "npx webpack --config webpack.config.js -w",
     "test": "jest",
     "db:clean": "node scripts/build-database/create-database.js",
     "db:seed": "node scripts/seed-database/seed-database.js",
@@ -13,9 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^1.3.4",
     "babel-loader": "^7.1.4",
     "css-loader": "^0.28.10",
-    "graphql-yoga": "^1.8.2",
+    "express": "^4.16.3",
+    "graphql": "^0.13.2",
+    "graphql-tools": "^2.24.0",
     "lodash": "^4.17.5",
     "node-sass": "^4.8.3",
     "npm": "^5.8.0",
