--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass-loader": "^6.0.7",
     "scss-loader": "0.0.1",
     "style-loader": "^0.20.2",
+    "styled-components": "^3.2.6",
     "webpack": "^4.1.0"
   },
   "devDependencies": {
