--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-boost": "^0.1.4",
     "apollo-server-express": "^1.3.4",
     "babel-loader": "^7.1.4",
     "css-loader": "^0.28.10",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.1",
     "graphql-tools": "^2.24.0",
     "lodash": "^4.17.5",
     "node-sass": "^4.8.3",
     "npm": "^5.8.0",
     "pg": "^7.4.1",
     "react": "^16.3.0",
+    "react-apollo": "^2.1.3",
     "react-dom": "^16.3.0",
     "react-router-dom": "^4.2.2",
     "round-to": "^2.0.0",
