--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^7.1.4",
     "css-loader": "^0.28.10",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
     "graphql-tools": "^2.24.0",
@@ -31,6 +32,7 @@
     "react-apollo": "^2.1.3",
     "react-dom": "^16.3.0",
     "react-router-dom": "^4.2.2",
+    "recompose": "^0.27.0",
     "round-to": "^2.0.0",
     "sass-loader": "^6.0.7",
     "scss-loader": "0.0.1",
