--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.6",
+    "@fortawesome/react-fontawesome": "0.0.19",
+    "als-id-generator": "^1.0.0",
     "apollo-boost": "^0.1.4",
     "apollo-server-express": "^1.3.4",
     "babel-loader": "^7.1.4",
