--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.3.0",
     "react-apollo": "^2.1.3",
     "react-dom": "^16.3.0",
+    "react-markdown": "^3.3.2",
     "react-query-params": "^1.0.7",
     "react-router-dom": "^4.2.2",
     "recompose": "^0.27.0",
